refactor: 分离 tick/渲染生命周期 (#2)
- 引入 FrameScheduler/Document.tickFrame()：tick 负责样式提交、元素逻辑与 Drawer.flushUpdates；render 仅执行纯绘制。
- 样式更新机制重构：引入失效标记+队列机制，统一在 tick 中 flushPendingStyleUpdates()，消除输入事件路径的同步 updateCSS() 分配风暴。
- 动画/过渡推进重构：改为在渲染阶段执行 Document.stepMotionRender() 并写入 StyleFrameCache，使 getComputedStyle() 变为无副作用的只读快照。
- 优化文本系统：新增 Text.wrapCached() 。
- 性能专项优化：
  * 将 class 解析改为内部 Set 缓存，消灭 Selector 匹配时的字符串 split 损耗。
  * 优化事件监听器迭代逻辑，减少高频触发下的 ArrayList 分配。
  * 细化滚动 dirty flag 判定，并确保文本/输入变更时同步失效 wrappedText 与 size 缓存。

(cherry picked from commit 06006c32d3804c4f2066db4c18e327451abf74fa)